[gd_scene load_steps=2 format=3 uid="uid://bmultiplayer_menu"]

[ext_resource type="Script" path="res://scripts/multiplayer_menu.gd" id="1_menu_script"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="TitleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="Title" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.91, 0.91, 0.91, 1)
theme_override_font_sizes/font_size = 48
text = "MULTIPLAYER"
horizontal_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HostButton" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "HOST GAME"

[node name="JoinButton" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "JOIN GAME"

[node name="BackButton" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "BACK"

[connection signal="pressed" from="MenuContainer/HostButton" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MenuContainer/JoinButton" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MenuContainer/BackButton" to="." method="_on_back_pressed"] 